<resources>
    <string name="app_name">Quizmodoro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>

    <string name="start_timer">Start.</string>
    <string name="start_button">Start session</string>
    <string name="stop_button">Stop</string>
    <string name="resume_button">Resume</string>
    <string name="reset_button">Reset</string>

    <string name="timer_value">00:00</string>

</resources>