<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/alarm"
            android:textColor="@color/purple_500"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:textColor="@color/purple_500"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_apps_24"
            android:textColor="@color/purple_500"
            android:title="@string/menu_settings" />
    </group>
</menu>