<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/nav_header_desc"-->
<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->
<!--        app:srcCompat="@mipmap/ic_launcher_round" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/alarm_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/alarm" />
        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_home"
            android:textSize="28sp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/purple_500"
            android:fontFamily="@font/poppins_semibold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/history_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/history" />

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/menu_history"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            android:fontFamily="@font/poppins_semibold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/outline_apps_24" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_settings"
            android:textSize="28sp"
            android:textColor="@color/purple_500"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/poppins_semibold" />
    </LinearLayout>

</LinearLayout>